--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
-<body>
-    <header>
-        <nav class="nav ">
-            <div class="logo">
-                JOCOB.
-            </div>
-            <ul class="li">
-
-                <li class="white">HOME</li>
-                <li>ABOUT</li>
-                <li>SERVICES</li>
-                <li>PORTFOLIO</li>
-                <li>CONTACT</li>
-            </ul>
-        </nav>
-    <div>
-        <h1>MY NAME IS MOHAMMAD HASHAM</h1>
-        <h4>frontend Devoloper</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis provident <br>accusamus laboriosam sint quam eum corrupti eligendi voluptatem voluptas<br> architecto ea quo ab perspiciatis. Debitis blanditiis nisi mollitia.</p>
-        <button class="button1">Hire me</button>
-        <button class="button2">Lets Talk</button>
-    </div>
-    </header>
-    <footer>
-        <div>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <!-- cdn link for font awesome icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <title>Responsive</title>
+  </head>
+  <body>
+    <!-- navigation bar -->
+    <nav>
+      <div class="nav-bar">
+        <!-- app logo -->
+        <div class="nav-bar-logo">
+          <h1>Logo</h1>
         </div>
-    </footer>
-</body>
+        <div class="nav-serch">
+          <input type="text" />
+        </div>
+        <!-- nav bar links -->
+        <div class="nav-bar-links">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/service">Service</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact-us">Contact Us</a></li>
+          </ul>
+        </div>
+        <!-- hamburger icon -->
+        <div class="nav-humber-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
